# go-tree-sitter

./: .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  go.mod  main.go  treesitter.go
lib/: treesitter.wasm.br
