"""Tree-sitter Go binding with Brotli compression support."""

genrule(
    name = "test_file",
    outs = ["test.txt"],
    cmd = "echo 'Hello, Tree-sitter WASM!' > $@",
)

# Brotli compression test
genrule(
    name = "test_brotli_compression",
    srcs = [":test_file"],
    outs = ["test.txt.br"],
    cmd = "$(location @com_google_brotli//:brotli) -o $@ $(SRCS)",
    tools = ["@com_google_brotli//:brotli"],
)

# Generate Tree-sitter static library (using Go-style vendor structure)
genrule(
    name = "tree_sitter_static_lib",
    srcs = ["//vendor/github.com/tree-sitter/tree-sitter:core"],
    outs = ["libtreesitter.a"],
    cmd = "ar rcs $@ $(locations //vendor/github.com/tree-sitter/tree-sitter:core)",
)

# Compress Tree-sitter static library with Brotli
genrule(
    name = "tree_sitter_compressed",
    srcs = [":tree_sitter_static_lib"],
    outs = ["treesitter.wasm.br"],
    cmd = "$(location @com_google_brotli//:brotli) -o $@ $(SRCS)",
    tools = ["@com_google_brotli//:brotli"],
)
