"""Tree-sitter WASM binding with Brotli compression support."""

# Download pre-built WASM from web-tree-sitter NPM package and compress with Brotli
genrule(
    name = "tree_sitter_wasm_compressed",
    srcs = ["@web_tree_sitter//:wasm_files"],
    outs = ["lib/treesitter.wasm.br"],
    cmd = """
        # Create output directory
        mkdir -p $$(dirname $(location lib/treesitter.wasm.br))
        
        # Compress WASM file with Brotli
        $(location @com_google_brotli//:brotli) -o $(location lib/treesitter.wasm.br) $(SRCS)
    """,
    tools = ["@com_google_brotli//:brotli"],
)

# Deploy compressed WASM file to source tree
genrule(
    name = "deploy",
    srcs = [":tree_sitter_wasm_compressed"],
    outs = ["deploy.stamp"],
    cmd = """
        # Copy the compressed WASM file to the source tree
        cp $(location :tree_sitter_wasm_compressed) lib/treesitter.wasm.br
        
        # Create a stamp file to indicate deployment is complete
        echo "Deployed treesitter.wasm.br to lib/ at $$(date)" > $(location deploy.stamp)
    """,
    local = 1,  # Run locally, not in sandbox
)
