"""
go-tree-sitter: A Tree-sitter Go binding with Brotli compression support for WASM deployment.
"""

module(name = "go-tree-sitter")

# C/C++ build rules for compiling Tree-sitter library
bazel_dep(name = "rules_cc", version = "0.0.9")

# HTTP archive rule for downloading external dependencies
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Google Brotli compression library v1.1.0
http_archive(
    name = "com_google_brotli",
    strip_prefix = "brotli-1.1.0",
    urls = ["https://github.com/google/brotli/archive/refs/tags/v1.1.0.zip"],
)

# Web Tree-sitter NPM package containing pre-built WASM files
http_archive(
    name = "web_tree_sitter",
    strip_prefix = "package",
    urls = ["https://registry.npmjs.org/web-tree-sitter/-/web-tree-sitter-0.25.8.tgz"],
    build_file_content = """
package(default_visibility = ["//visibility:public"])

filegroup(
    name = "wasm_files",
    srcs = ["tree-sitter.wasm"],
)
""",
)
